[Fixed] the edit-in-place mode to allow save unsaved edition when clicking on another todo to activate the edit-in-place mode instead of clicking the save or cancel button to turn off edit-in-place mode of current todo.

--- a/styles/main.css
+++ b/styles/main.css
@@ -105,6 +105,10 @@ ul > li {
   background-color: black;
 }
 
+.button-delete-todo-show {
+  opacity: 1;
+}
+
 .button-edit-save {
   color: #fff;
   background-color: #1DA1F2;
