--- a/styles/main.css
+++ b/styles/main.css
@@ -40,7 +40,7 @@ ul > li {
 }
 
 .todo-list {
-  width: 30rem;
+  width: 28.75rem;
 }
 
 .button {
@@ -54,6 +54,8 @@ ul > li {
   opacity: .4;
   cursor: move;
 }
+
+
 /****** control todo display option ******/
 
 
@@ -111,23 +113,29 @@ ul > li {
   border-right: 2px solid salmon;
 }
 
-/****** display todo ******/
+
+/****** todo *******/
+
 
 .todo {
-  /*line-height: 30px;*/
   display: flex;
   justify-content: center;
-  /*margin: .125rem 0;*/
   padding: .25rem 0;
-  /*border-radius: .25rem;*/
-  /*background-color: #eee;*/
-  /*transition: opacity 2000ms;*/
-  /*user-select: text;*/
+}
+
+
+/****** todo display ******/
+
+
+.todo-display {
+  display: flex;
+  justify-content: center;
 }
 
 .todo-main {
   display: flex;
-  width: 25rem;
+  box-sizing: border-box;
+  width: 25.25rem;
   margin: 0 .25rem;
   padding: .25rem .5rem;
   border-radius: .25rem;
@@ -136,13 +144,24 @@ ul > li {
   user-select: text;
 }
 
-.todo-display {
-  display: flex;
-  justify-content: center;
-}
-
 .todo-display-hidden {
   display: none;
+}
+
+.todo-drag-handle {
+  display: inline-block;
+  visibility: hidden;
+  width: 1rem;
+  color: #aaa;
+  cursor: move;
+  line-height: 6px;
+  padding: 0 0 0 .75rem;
+  text-shadow: 0 0 0 black;
+  user-select: none;
+}
+
+.todo:hover .todo-drag-handle {
+  visibility: visible;
 }
 
 .todo-checkbox {
@@ -175,16 +194,18 @@ ul > li {
   text-decoration: line-through;
 }
 
-/****** edit todo ******/
+
+/****** todo edit ******/
 
 
 .todo-edit {
   display: none;
   width: 25rem;
+  padding: 0 .25rem;
 }
 
-.todo-edit .button {
-  margin: 0 2px;
+.todo-edit .button:first-of-type {
+  margin: 0 .25rem;
 }
 
 .todo-edit-show {
