[Adjusted] the animation effect code of checkbox and delete button.

--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -248,54 +248,35 @@ input[name=todo-input] {
   transition: width 50ms ease;
 }
 
-/** hover时的动画 **/
+/** 进入hover时的状态与过度动画，和checked取消时的动画 **/
 
 label:hover .display-checkbox::before {
   width: 6px;
-  transition: width 100ms ease, background-color 350ms;
+  transition: width 100ms ease, background-color 350ms cubic-bezier(0.78, -1.22, 0.17, 1.89);
 }
 
 label:hover .display-checkbox::after {
   width: 10px;
-  transition: width 150ms ease, background-color 350ms;
+  transition: width 150ms ease, background-color 350ms cubic-bezier(0.78, -1.22, 0.17, 1.89);
 }
 
-/** 维持点击后，checkbox的状态，假如label中有其他可点击的部分，点击和取消时的动画 **/
+/** 维持点击后checkbox的状态，假如label中有其他可点击的部分，点击时的动画 **/
 
-input[type=checkbox]:checked+.display-checkbox {
+.hidden-checkbox:checked+.display-checkbox {
   background-color: #fff;
   transform: scale(1.1);
 }
 
-input[type=checkbox]:checked+.display-checkbox::before {
+.hidden-checkbox:checked+.display-checkbox::before {
   width: 6px;
   background: #000;
-  transition: width 150ms ease 100ms;
+  transition: width 150ms ease 100ms, background-color 350ms cubic-bezier(0.78, -1.22, 0.17, 1.89);
 }
 
-input[type=checkbox]:checked+.display-checkbox::after {
+.hidden-checkbox:checked+.display-checkbox::after {
   width: 10px;
   background: #000;
-  transition: width 150ms ease 100ms;
-}
-
-/** 在checkbox上点击的动画，包括取消时的动画 **/
-
-label:hover input[type=checkbox]:checked+.display-checkbox {
-  background-color: #fff;
-  transform: scale(1.1);
-}
-
-label:hover input[type=checkbox]:checked+.display-checkbox::before {
-  width: 6px;
-  background: #000;
-  transition: width 150ms ease 100ms, background-color 300ms;
-}
-
-label:hover input[type=checkbox]:checked+.display-checkbox::after {
-  width: 10px;
-  background: #000;
-  transition: width 150ms ease 100ms, background-color 300ms;
+  transition: width 150ms ease 100ms, background-color 350ms cubic-bezier(0.78, -1.22, 0.17, 1.89);
 }
 
 .todo-content {
@@ -347,7 +328,7 @@ label:hover input[type=checkbox]:checked+.display-checkbox::after {
   border-radius: .125rem;
   transform: rotate(45deg);
   transform-origin: 0 0;
-  transition: width 150ms ease-in-out;
+  transition: width 150ms ease-in-out 100ms;
 }
 
 .button-delete-todo::after {
@@ -361,7 +342,7 @@ label:hover input[type=checkbox]:checked+.display-checkbox::after {
   border-radius: .125rem;
   transform: rotate(135deg);
   transform-origin: 0 0;
-  transition: width 150ms ease-in-out 100ms;
+  transition: width 150ms ease-in-out;
 }
 
 .delete-button-wrapper:hover .button-delete-todo::before {
