--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -437,13 +437,13 @@ label:hover .display-checkbox::after {
 }
 
 .display-option .button:hover {
-  background-color: rgba(250, 128, 114, 0.8);
+  background-color: rgba(250, 128, 114, 1);
   box-shadow: 0 2px 4px rgba(0, 0, 0, .4);
   transition: background-color 100ms, box-shadow 100ms;
 }
 
 .display-option .button:active {
-  background-color: rgba(250, 128, 114, 0.7);
+  background-color: rgba(250, 128, 114, 0.8);
   box-shadow: 0 1px 2px rgba(0, 0, 0, .4);
   transition: background-color 100ms, box-shadow 100ms;
 }
@@ -453,7 +453,7 @@ label:hover .display-checkbox::after {
 }
 
 .display-option .selected {
-  background-color: rgba(250, 128, 114, 0.8);  /** salmon 0.8 opacity **/
+  background-color: rgba(250, 128, 114, 1);  /** salmon **/
   box-shadow: 0 2px 4px rgba(0, 0, 0, .4);
 }
 
