--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -128,8 +128,13 @@ input[type=text]:focus + .focus-border {
 .todo {
   display: flex;
   justify-content: center;
+  padding: 0;
+  /* Opacity is used for drag and drop. Padding is used for removing todo*/
+  transition: opacity 2000ms, padding 150ms 100ms;
+}
+
+.todo-with-padding {
   padding: .25rem 0;
-  transition: opacity 2000ms;
 }
 
 .todo-hidden {
@@ -142,20 +147,42 @@ input[type=text]:focus + .focus-border {
   cursor: move;
 }
 
-
 /****** todo display ******/
 
 
 .todo-display {
   display: flex;
+  /*height: 0;*/
+  max-height: 0;
   justify-content: center;
   line-height: 1.375rem;
+  transition: all 300ms ease-out;
+}
+
+.todo-display.show-todo {
+  /*height: 100%;*/
+  max-height: 6.75rem;
+  /*height: 2.0125rem;*/
+}
+
+.stretch-fade .todo-main {
+  opacity: 0;
+  width: 0;
+  transition: width 250ms ease-in-out, opacity 300ms;
+}
+
+.stretch-fade .show-todo .todo-main {
+  opacity: 1;
+  width: 25.25rem;
+  transition: width 250ms ease-in-out 50ms, opacity 300ms;
 }
 
 .todo-main {
   display: flex;
   box-sizing: border-box;
-  width: 25.25rem;
+  /*width: 25.25rem;*/
+  width: 0;
+  overflow: hidden;
   margin: 0 .25rem;
   padding: .25rem .5rem;
   border-radius: .25rem;
@@ -192,7 +219,7 @@ input[type=text]:focus + .focus-border {
   text-shadow: 0 0 1px rgba(0, 0, 0, .4);
 }
 
-.todo:hover .todo-drag-handle {
+.todo:hover .show-todo .todo-drag-handle {
   visibility: visible;
 }
 
@@ -286,13 +313,18 @@ label:hover .display-checkbox::after {
   align-self: baseline;
   color: #000;
   line-height: 1.6;
-  transition: color 200ms;
+  transition: all 200ms ease-out;
+  opacity: 0;
   cursor: text;
 }
 
 .todo-content:active {
   opacity: 0.6;
   transition: opacity 100ms;
+}
+
+.todo-content.show-content {
+  opacity: 1;
 }
 
 .todo .delete-button-wrapper {
@@ -314,7 +346,7 @@ label:hover .display-checkbox::after {
   transition: transform 100ms ease;
 }
 
-.todo:hover .button-delete-todo {
+.todo:hover .show-todo .button-delete-todo {
   visibility: visible;
 }
 
@@ -367,9 +399,12 @@ label:hover .display-checkbox::after {
 
 
 .todo-edit {
-  display: none;
+  /*display: none;*/
+  display: flex;
+  height: 0;
   width: 25rem;
-  padding: 0 .25rem;
+  overflow: hidden;
+  /*padding: 0 .25rem;*/
 }
 
 .todo-edit .button:first-of-type {
@@ -377,9 +412,10 @@ label:hover .display-checkbox::after {
 }
 
 .todo-edit-show {
-  display: flex;
+  /*display: flex;*/
+  padding: 0 .25rem;
   justify-content: center;
-  height: 2rem;
+  height: 2.0625rem;  // 33px, eaqual to todo-display
 }
 
 .todo-edit .input-bar {
