--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -128,13 +128,9 @@ input[type=text]:focus + .focus-border {
 .todo {
   display: flex;
   justify-content: center;
-  padding: 0;
-  /* Opacity is used for drag and drop. Padding is used for removing todo*/
-  transition: opacity 2000ms, padding 150ms 100ms;
-}
-
-.todo-with-padding {
-  padding: .25rem 0;
+  /*padding: 0;*/
+  /* Opacity is used for drag and drop. */
+  transition: opacity 2000ms;
 }
 
 .todo-hidden {
@@ -154,15 +150,17 @@ input[type=text]:focus + .focus-border {
   display: flex;
   /*height: 0;*/
   max-height: 0;
+  margin: 0;
   justify-content: center;
   line-height: 1.375rem;
-  transition: all 300ms ease-out;
+  transition: all 300ms ease-out, margin 150ms 100ms;
 }
 
 .todo-display.show-todo {
   /*height: 100%;*/
-  max-height: 6.75rem;
   /*height: 2.0125rem;*/
+  max-height: 6.75rem;
+  margin: .25rem 0;
 }
 
 .stretch-fade .todo-main {
@@ -403,6 +401,7 @@ label:hover .display-checkbox::after {
   display: flex;
   height: 0;
   width: 25rem;
+  margin: 0;
   overflow: hidden;
   /*padding: 0 .25rem;*/
 }
@@ -413,6 +412,7 @@ label:hover .display-checkbox::after {
 
 .todo-edit-show {
   /*display: flex;*/
+  margin: .25rem 0;
   padding: 0 .25rem;
   justify-content: center;
   height: 2.0625rem;  // 33px, eaqual to todo-display
